--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # 忽略所有 .a 结尾的文件
-#*.a
+*.a
 # 但 lib.a 除外
-#!lib.a
+!111.a
 # 仅仅忽略项目根目录下的 TODO 文件，不包括 subdir/TODO
 #/TODO
 # 忽略 build/ 目录下的所有文件
@@ -9,4 +9,4 @@
 # 会忽略 doc/notes.txt 但不包括 doc/server/arch.txt
 #doc/*.txt
 
-.gitignore
+/.gitignore
